# opengl-learn

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  test
.cache/clangd/index/: glad.c.463636B77C3E55FB.idx  glad.h.E1DF52A0D00B6B8A.idx  khrplatform.h.85B91DADB8B1A6D6.idx  main.c.82C4C6960046A7C6.idx  main.cpp.3A9C601E485563A0.idx
lib/glad/include/glad/: glad.h  glad.h.gch
lib/glad/src/: glad.c
src/: main.c  main.cpp  shader.c  shader.h
src/shaders/: fragment_shader.txt  vertex_shader.txt
